# raspberrypi

./: .gitignore  EuRoC.yaml  Makefile  README.md  cli.py  cyclonedds.xml  docker-compose.yml  frames_2026-01-20_12.54.33.gv  frames_2026-01-26_13.10.06.gv  my_map.yaml  requirements.txt  robot_starter.sh  run.sh  test.py  tugbot_depot.sdf
audio/: README.md  audio_controller.py  audio_play.py  audio_record.py  config.py  micphone.py
camera/: Readme  calibrate.py  camera.py
camera/utills/: README.md  calibration_script.py  config.py  mark_on_camera_view_pix.py  mark_on_map_inch.py  test_camera_view.py  test_pixel2world.py
car/: car.py  car_old.py
clients/: README.md  agi.py
models/: segformer_b2_torch2.9.0_cu126_opset18.onnx
robot/: Dockerfile  Dockerfile.slam  README  cyclonedds.xml  datas  package.xml  robot_starter.sh  setup.cfg  setup.py
robot/config/: 4wd_car.urdf.xacro  4wd_car_stereo.urdf.xacro  EuRoC.yaml  ekf.yaml  ekf.yaml.default  imx219.json  my_map.yaml  nav2_params copy.yaml  nav2_params.yaml  nav2_params.yaml.bk  nav2_params.yaml.default  nav2_params_stereo.yaml  robot_config.json  robot_ergonomics.yaml  rtabmap.ini
robot/docs/: IMU  NV2
robot/launch/: algo.launch.py  ctl.launch.py  ekf.launch.py  full.launch.py  full.rtabmap.launch.py  full.sim.launch.py  image_proc.launch.py  main.launch.py  nv2.launch.py  offline.launch.py  orbslam3_mono.launch.py  orbslam3_stereo.launch.py  robot.launch.py  rtabmap.cnn.launch.py  rtabmap.launch.py  rtabmap.launch.py.bk  rtabmap.momo.launch.py  rtabmap.odometry.launch.py  rtabmap.stereo.launch copy.py  rtabmap.stereo.launch.py  seg.launch.py  sim.launch.py  sim.stereo.launch.py  slam.launch.py  slam_toolbox.launch.py
robot/robot/: camera_publisher_node.py  car_driver_node.py  continuous_explorer.py  deeppicar_data_collect_node.py  explore_node.py  icm20948_spi_node.py  manual_nav_commander.py  seg_to_scan_node.py  static_tf_pub_node.py  struct_explorer.py
robot/robot/camera/: calibrate.py  camera.py  video_reader.py
robot/robot/camera/utills/: Box2xy.py  build_camera_json.sh  calibrator.py  extract_frames.py  jsonInitializer.py  pertrans.py  postProcessing.py  test_map_view.py  test_point_on_camera_view.py  util.py
robot/robot/car/: car.py  motor.py  steer.py
robot/robot/vision/: detector.py  segformer copy.py  segformer.py  segformer_onnx_export.py  segformer_transformer.py  segformer_trt.py  trt_engine.py  trt_engine_dm.py
ros2/: Dockerfile  Dockerfile.slam  camera_publisher_node.py  launch.py  nv2_launch.py  robot_controler.py
ros2/launch/: robot_launch.py  slam_launch.py
ros2/orb_slam3_ros2_wrapper/: CMakeLists.txt  package.xml
ros2/orb_slam3_ros2_wrapper/include/orb_slam3_ros2_wrapper/: SystemWrapper.hpp
ros2/orb_slam3_ros2_wrapper/launch/: orb_slam3_launch.py
ros2/orb_slam3_ros2_wrapper/src/: SystemWrapper.cpp  mono_imu_node.cpp  mono_node.cpp
tasks/: README.md  audio_chat_app.py  base.py  config.py  tasks.py
tools/: README.md  device.py  utils.py
world/: README.md  bed_room.sdf  harmonic.sdf  living_room.sdf  tugbot_depot.sdf
yolo/: Dockerfile  Dockerfile.segformer_trt  README.md  test.py  test_on_ros2.py  test_on_yolo.py  test_pixel_inverse_consistency.py  zen_seg.py  zenoh_yolo.json5
