<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam3_ros2_wrapper</name>
  <version>1.0.0</version>
  <description>ROS 2 wrapper for ORB-SLAM3 supporting Mono and Mono-IMU.</description>
  <maintainer email="guojingneo@163.com">neo</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>

  <depend>opencv</depend>
  <depend>eigen</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>